--- a/app/src/main/res/layout/adapter_wallet.xml
+++ b/app/src/main/res/layout/adapter_wallet.xml
@@ -12,15 +12,17 @@
 
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="52dp"
+    android:paddingLeft="@dimen/margin_10"
+    android:paddingRight="@dimen/margin_10"
     android:orientation="horizontal">
 
     <LinearLayout
         android:id="@+id/ll_left"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/ll_integral"
-        android:layout_marginTop="@dimen/margin_10"
         android:orientation="vertical">
 
         <TextView
@@ -54,34 +56,28 @@
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_10"
         android:gravity="right"
+        android:layout_centerVertical="true"
         android:layout_alignParentRight="true">
 
         <TextView
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/setting_title_color"
+            android:textColor="@{wallet.ReceiptsOrOut == 1 ? @color/RED_E00000 : @color/yellow_A47E60}"
             android:textSize="@dimen/textsize15"
-            android:text="@{wallet.CretateTime}"
+            android:text="@{wallet.ReceiptsOrOut == 1 ?  @string/add + String.valueOf(wallet.expenditureMoney): @string/reduce + String.valueOf(wallet.expenditureMoney)}"
             />
-
-        <TextView
-            android:id="@+id/tv_total"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="总额:"
-            android:layout_marginTop="@dimen/margin_5"
-            android:textColor="@color/grey_333333"
-            android:textSize="@dimen/textsize12"/>
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_below="@+id/ll_left"
-        android:layout_marginTop="@dimen/margin_10"
-        android:background="@color/common_bg"/>
+        android:layout_alignParentBottom="true"
+        android:background="@color/line_bg"/>
 
 </RelativeLayout>
+
+
+
 </layout>
