--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -108,7 +108,7 @@
                 android:layout_height="wrap_content"
                 android:text="尊享会员升级大礼包"
                 android:layout_marginTop="@dimen/margin_20"
-                android:textColor="#ffa47e60"
+                android:textColor="@color/yellow_A47E60"
                 android:textSize="18sp"
                 />
 
@@ -117,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:text="申请vip收获超值礼包"
                 android:layout_marginTop="@dimen/margin_5"
-                android:textColor="#ffa47e60"
+                android:textColor="@color/yellow_A47E60"
                 android:textSize="13sp"
                 />
             
