--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -388,8 +388,8 @@
         android:layout_width="match_parent"
         android:layout_margin="@dimen/margin_10"
         android:background="@drawable/bg_sure_order_address"
-        android:paddingLeft="@dimen/padding_15"
-        android:paddingRight="@dimen/padding_15"
+        android:paddingLeft="@dimen/padding_10"
+        android:paddingRight="@dimen/padding_10"
         android:layout_height="44dp">
         <TextView
             android:layout_width="wrap_content"
@@ -420,6 +420,7 @@
         android:textColor="@color/grey_333333"
         android:textSize="@dimen/textsize16"
         android:gravity="center"
+        android:onClick="@{()->personalViewModel.LoginOut()}"
         android:layout_marginLeft="@dimen/margin_10"
         android:layout_marginRight="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_10"
