--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -238,6 +239,7 @@
             android:id="@+id/rl_change_psd"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            app:onClickCommand="@{personalViewModel.bindingCommand}"
             >
 
             <TextView
