--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,28 +16,45 @@
 
     </data>
 
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/line_bg"
         >
 
+
+        <in.srain.cube.views.ptr.PtrFrameLayout
+            android:id="@+id/mPtrframe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@mipmap/ic_home_head_fresh"
+            android:layout_marginTop="30dp"
+            app:ptr_duration_to_close="3000"
+            app:ptr_duration_to_close_header="2000"
+            app:ptr_keep_header_when_refresh="true"
+            app:ptr_pull_to_fresh="false"
+            app:ptr_ratio_of_header_height_to_refresh="1.2"
+            app:ptr_resistance="1.7">
+
     <com.lzyyd.hsq.ui.TranslucentScrollView
         android:id="@+id/tsv_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
+        android:fillViewport="true"
         >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#f2f2f2"
+        android:layout_marginTop="60dp"
         >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
         android:orientation="vertical">
 
 
@@ -475,6 +492,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="@dimen/margin_10"
+                    android:layout_marginBottom="60dp"
                     />
 
             </LinearLayout>
@@ -490,6 +508,8 @@
 
     </com.lzyyd.hsq.ui.TranslucentScrollView>
 
+
+        </in.srain.cube.views.ptr.PtrFrameLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
