--- a/app/src/main/res/layout/me_changchangqing_layout.xml
+++ b/app/src/main/res/layout/me_changchangqing_layout.xml
@@ -17,6 +17,7 @@
             name="ccq"
             type="com.lzyyd.hsq.bean.CcqBean" />
 
+
         <import type="android.view.View"/>
 
     </data>
@@ -61,6 +62,8 @@
         android:layout_height="80dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:paddingLeft="@dimen/margin_10"
+        android:paddingRight="@dimen/margin_10"
         android:onClick="@{()->me.setJumpCcq()}"
         >
 
@@ -105,12 +108,14 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_ccq_tihuo"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:layout_marginTop="@dimen/margin_10"
-        android:visibility="@{me.ccqField > 0 ? View.VISIBLE : View.GONE}"
+        android:paddingLeft="@dimen/margin_10"
+        android:paddingRight="@dimen/margin_10"
         >
 
         <ImageView
@@ -145,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:text='@{"已提"+ String.valueOf(balance.money7Balance) + @string/piece}'
                 android:textColor="#ff333333"
-               android:textSize="10sp"
+                android:textSize="10sp"
                 android:layout_marginLeft="@dimen/margin_10"
                 />
 
